Bug 304854 - timeline only shows recently saved but not recently accessed files
Summary: timeline only shows recently saved but not recently accessed files
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: kioslave - timeline (other bugs)
Version First Reported In: 4.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-09 13:28 UTC by m.wege
Modified: 2014-09-02 19:41 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-08-09 13:28:44 UTC
When using timeline I noticed that the timeline only shows the recently saved files and not the files I recently opened. I am aware that this may depend on the mount options of the drive, but I just use the regular options provided with Kubuntu. So I assume with an ext4-filesystem KDE normally should have access to the information which files have been opened.

Reproducible: Always
Comment 1 Vishesh Handa 2012-08-28 09:10:13 UTC
For now, we have no way of determining if a file was accessed. Specially since most file systems are mounted with 'noatime' which does not update the access time of the file.

And even if there was, I'm not sure it would be a good idea to update the Nepomuk database each time a file was accessed.
Comment 2 m.wege 2012-08-28 09:37:41 UTC
Hmm, but at least in ext4 the standard is that these accesses are recorded. In Kubuntu ext4 is set to mount without changing this.
I do not know about the database problems with this, but the feature is much less usefull, if it only refers to files with I have changed. Many formats as PDF, MP3, AVI are made to be read only in general. It also happens with text documents that I just open to read them. I do not know how it is meant, but in Dolphin the feature is branded as "Recently Accessed". That would be far from correct and then must be renamed into "Recenly Saved/Changed". Although I would really prefer a solution which really holds the promise.
If a file system was not mounted correctly, there could be a window requesting to alter the mount option or at least informing the user why the feature does not work correctly.
Comment 3 Richard Llom 2013-11-14 08:33:44 UTC
This is really a *serious* usability issue.

Because of this, I thought my system was broken and spent quite some time on research & investigating to find the cause ... until I found this issue. ;-( 

Why is this this even unconfirmed???
And what is the progress?


The most urgent would at least be to tell users the truth, about accessed vs. changed (as m.wege pointed out), _so they do not longer think there system is broken_...
Comment 4 S. Christian Collins 2013-11-14 14:26:27 UTC
Perhaps the text "Recently Accessed" should be changed to "Recently Modified" to avoid confusion.
Comment 5 Thomas Pfeiffer 2013-11-16 11:34:40 UTC
From a regular user's perspective, "Recently Saved" would actually come closest to what it really is. For a regular user "Modified" means "I open the file, I change it, I save it". This does not include e.g. downloaded files, files received via email attachment, or even newly created files.
"Saved", on the other hand, is the label of the button/menu entry which creates a file system write event in most cases (even downloads are often triggered via a "Save" command. The only thing that people might not regard as "saved" is if they move the file within the local file system, but they would not consider it as "modifying" it either, because the file itself has not changed.

Therefore from a usability perspective, I strongly recommend "Recently Saved".
I set the bug to "confirmed" because the current label indeed is a big usability issue.
Comment 6 S. Christian Collins 2013-11-16 15:12:38 UTC
I agree. "Recently Saved" would be clearer than my suggestion.
Comment 7 Frank Reininghaus 2013-11-18 23:25:24 UTC
Thanks for the suggestion! I also agree that "Saved" makes it clearer what these entries are about - good idea!

Changing the string "Recently Accessed" to "Recently Saved" in

PlacesItem::setBookmark(const KBookmark& bookmark)

is not sufficient though IMHO - the word "accessed" appears everywhere in different files in dolphin/src/panels/places in both variable and type names and also in the comments. This should all be changed to "saved" for consistency and to avoid confusion in the future when people try to read and understand the code. And after making the change, it should be tested carefully if everything still works as expected. I am currently not able to do that. If anyone volunteers to take on this task, please go ahead, submit the patch to http://git.reviewboard.kde.org/ and add the affected groups (Dolphin, Nepomuk, and KDE Usability), and add a link to the review request here.
Comment 8 Richard Llom 2013-11-19 12:04:45 UTC
@Frank
Thanks for giving info on this. If I have some free time, I'll take a look on this (never submitted a patch before).

However, what about addressing the cause / the original issue? This is IMHO a real usability flaw, as you will never be able to see your recent pdf, movies, audio files etc. (ofc unless you modified them, which is a different topic). I would even go so far to call a DE broken if it doesn't support this.
Am I'm the only one thinking like this?
Comment 9 Frank Reininghaus 2013-11-19 12:16:57 UTC
(In reply to comment #8)
> Thanks for giving info on this. If I have some free time, I'll take a look
> on this (never submitted a patch before).

That would be great!

> However, what about addressing the cause / the original issue? This is IMHO
> a real usability flaw, as you will never be able to see your recent pdf,
> movies, audio files etc. (ofc unless you modified them, which is a different
> topic). I would even go so far to call a DE broken if it doesn't support
> this.

As Vishesh pointed out in comment 1, there is no reliable way to know the last time a file was last accessed. At first sight, one might think that the data gathered by the "Activities" framework (which some KDE applications report the currently viewed file/URL to) could be used, but it would not work for files opened with applications which do not communicate with the Activities demon. So if you opened a video with, e.g., VLC, it would not show up in the "Recently accessed" items.
Comment 10 Richard Llom 2013-11-19 23:34:03 UTC
(In reply to comment #9)
> (In reply to comment #8)
> > Thanks for giving info on this. If I have some free time, I'll take a look
> > on this (never submitted a patch before).
> That would be great!
I just uploaded a diff on the reviewboard.

> > However, what about addressing the cause / the original issue? This is IMHO
> > a real usability flaw, as you will never be able to see your recent pdf,
> > movies, audio files etc. (ofc unless you modified them, which is a different
> > topic). I would even go so far to call a DE broken if it doesn't support
> > this.
> 
> As Vishesh pointed out in comment 1, there is no reliable way to know the
> last time a file was last accessed. At first sight, one might think that the
> data gathered by the "Activities" framework (which some KDE applications
> report the currently viewed file/URL to) could be used, but it would not
> work for files opened with applications which do not communicate with the
> Activities demon. So if you opened a video with, e.g., VLC, it would not
> show up in the "Recently accessed" items.
1.
His comments begins with "for now" and is one year old, so things might have changed. Also he doesn't seem so sure at all in this comment. Is Vishesh still around?
2.
Using the activity framework, wouldn't be so bad at all. First of all we would at least see some accessed files (e.g. pdf's with okular, movies with dragon, txt with kwrite/kate etc...) and the number of apps supporting the framework is certainly growing.
3.
Just looking at the access-time of files can't be the solution anyways, because this would also yield a lot of "background" files (config, db, temporary files, etc.), which you don't want to have in your recent list. How do other (linux) DE do this?
Comment 11 Vishesh Handa 2013-11-20 10:03:18 UTC
Hey Richard. Yes, I'm still around :)

I checked more into the access time problem and some distros do mount their file systems without noatime, so such a thing could theoretically be written, but it would only work for a small subset. The main reason I'm agains't such a feature is that it would result in a disk write each time a file is read. This isn't such a big problem when you have a rotational disk, but it might be with an SSD.

Additionally, as you mentioned, this concept of showing accessed files also breaks with file search which looks into the file. Imagine grepping a folder, and then all those files showing up in recently accessed.

The only reliable way to do this would be to either use Activities or another similar framework. From what I know, Gnome uses Zeitgeist to achieve similar functionality. But they also suffer from the problem of applications not using Zeitgiest.
Comment 12 m.wege 2013-11-20 10:12:32 UTC
Could this problem be solved by limiting the results to (user) selected filetypes? e.g. PDFs, office, sound and video files as a standard setting and for users with a more special interest the possibility to extend this.
The main problem for results missing from non-KDE apps from my opinion would be Firefox and Libreoffice. But as far as I know for Firefox there is Firemuk which writes info about downloaded files into Nepomuk. So may be the info is already there. What then would be greatly missing is Libreoffice info about recently accessed files. May be there is a possibility to have an extension here too?
Comment 13 Richard Llom 2013-11-20 11:29:56 UTC
Hey Vishesh,
glad to hear. :-)

But Zeitgeist is based on Nepumuk? So if both Gnome _AND KDE_, set on this solution for recent files, there will surely be a wider support from app developers.

And as I said before, the current situation, with no recent accessed files at all, is IMHO a broken DE. So using the framework will definitely improve the situation for KDE users.

The timestamp solution, doesn't sound so nice and are there other solutions?
Comment 14 Emmanuel Pescosta 2014-09-02 19:41:39 UTC
Git commit 072c5e06cee89049ddc1553a6a21b84a0dcac0f1 by Emmanuel Pescosta, on behalf of kdeuser 56.
Committed on 02/09/2014 at 19:37.
Pushed by emmanuelp into branch 'master'.

Rename "Recently Accessed" to "Recently Saved"

In dolphin the Section that leads you to timeline claims
to show "Recently Accessed", which is not true, it shows
"Recently Saved" instead.
REVIEW: 119986

M  +6    -6    doc/dolphin/index.docbook
M  +9    -9    dolphin/src/panels/places/placesitem.cpp
M  +1    -1    dolphin/src/panels/places/placesitem.h
M  +14   -14   dolphin/src/panels/places/placesitemmodel.cpp
M  +1    -1    dolphin/src/panels/places/placespanel.cpp

http://commits.kde.org/kde-baseapps/072c5e06cee89049ddc1553a6a21b84a0dcac0f1