Rename "Recently Accessed" to "Recently Saved"

In dolphin the Section that leads you to timeline claims
to show "Recently Accessed", which is not true, it shows
"Recently Saved" instead.

BUG: 304854
REVIEW: 119986